Code restructering and adding code that redacts sensitive info.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -228,91 +228,7 @@
    "source": [
     "# Load the data\n",
     "df = pd.read_csv(output_csv)\n",
-    "df.head(25)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Removing any personal information to anonymize data  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load and clean sensitive data\n",
-    "df = pd.read_csv(output_csv)\n",
-    "df = remove_sensitive_info(df, text_column='Cleaned_Text')\n",
-    "df.to_csv(output_csv, index=False, encoding='utf-8')  # Overwrite with cleaned data\n",
-    "logging.info(\"Sensitive information removed and CSV updated.\")\n",
-    "print(df.head(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "    Remove personal information such as names, dates, and numbers from the text.\n",
-    "    Supports English, Dutch, and French languages.\n",
-    "\n",
-    "    Args:\n",
-    "        text (str): The input text containing potential personal information.\n",
-    "        nlp_en: spaCy model for English.\n",
-    "        nlp_nl: spaCy model for Dutch.\n",
-    "        nlp_fr: spaCy model for French.\n",
-    "\n",
-    "    Returns:\n",
-    "        str: The cleaned text with personal information removed.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "def remove_sensitive_info(text, nlp_en, nlp_nl, nlp_fr):\n",
-    "    \n",
-    "    if not isinstance(text, str) or not text.strip():\n",
-    "        return \"\"  # Handle non-string values or empty strings\n",
-    "\n",
-    "    # Detect the language of the text using the detect_language function\n",
-    "    language = detect_language(text)\n",
-    "\n",
-    "    # Load the appropriate spaCy model based on the detected language\n",
-    "    if language == 'en':\n",
-    "        nlp = nlp_en\n",
-    "    elif language == 'nl':\n",
-    "        nlp = nlp_nl\n",
-    "    elif language == 'fr':\n",
-    "        nlp = nlp_fr\n",
-    "    else:\n",
-    "        nlp = nlp_en  # Default to English if the language is not supported\n",
-    "\n",
-    "    # Process the text with spaCy\n",
-    "    doc = nlp(text)\n",
-    "\n",
-    "    # Remove PERSON names, dates, and other sensitive entities using spaCy NER\n",
-    "    sensitive_entities = [\"PER\", \"DATE\", \"GPE\", \"LOC\", \"FAC\", \"ORG\"]\n",
-    "    cleaned_tokens = [\n",
-    "        token.text for token in doc \n",
-    "        if token.ent_type_ not in sensitive_entities and not token.is_punct\n",
-    "    ]\n",
-    "\n",
-    "    # Join the remaining tokens into a single string\n",
-    "    cleaned_text = \" \".join(cleaned_tokens)\n",
-    "\n",
-    "    # Remove standalone numbers and other sensitive patterns using regex\n",
-    "    cleaned_text = re.sub(r'\\b\\d+\\b', '', cleaned_text)  # Remove standalone numbers\n",
-    "    cleaned_text = re.sub(r'\\b\\d{1,4}[-/]\\d{1,2}[-/]\\d{1,4}\\b', '', cleaned_text)  # Remove dates (YYYY-MM-DD, DD/MM/YYYY)\n",
-    "    cleaned_text = re.sub(r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b', '', cleaned_text)  # Remove email addresses\n",
-    "    cleaned_text = re.sub(r'\\bhttps?://\\S+\\b', '', cleaned_text)  # Remove URLs\n",
-    "\n",
-    "    # Remove extra spaces and leading/trailing whitespace\n",
-    "    cleaned_text = re.sub(r'\\s+', ' ', cleaned_text).strip()\n",
-    "\n",
-    "    return cleaned_text"
+    "df.head(30)"
    ]
   },
   {
@@ -330,6 +246,83 @@
     "- Remove urls \n",
     "- use stemming\n",
     "- do duplicate sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Precompiled regex patterns for faster matching\n",
+    "PATTERNS = {\n",
+    "    \"EMAIL\": re.compile(r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'),\n",
+    "    \"URL\": re.compile(r'\\bhttps?://\\S+\\b'),\n",
+    "    \"PHONE\": re.compile(r'\\b(?:\\+?\\d{1,3}[-.\\s]?)?(?:\\(?\\d{2,3}\\)?[-.\\s]?)?\\d{3,4}[-.\\s]?\\d{4}\\b'),\n",
+    "    \"DATE\": [\n",
+    "        re.compile(r'\\b\\d{1,4}[-/]\\d{1,2}[-/]\\d{1,4}\\b'),  # yyyy-mm-dd, dd-mm-yyyy, etc.\n",
+    "        re.compile(r'\\b\\d{1,2}\\s(?:Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)[a-z]*\\s\\d{2,4}\\b')  # 1 Jan 2023\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Named Entity categories to redact\n",
+    "SENSITIVE_ENTITIES = {\"PER\", \"DATE\", \"GPE\", \"LOC\", \"FAC\", \"ORG\"}\n",
+    "\n",
+    "def contains_sensitive_info(text, language):\n",
+    "    \"\"\"Check if text contains sensitive information.\"\"\"\n",
+    "    if not text:\n",
+    "        return False\n",
+    "    \n",
+    "    nlp = nlp_models.get(language, nlp_models['en'])\n",
+    "    doc = nlp(text)\n",
+    "    \n",
+    "    # Check for sensitive entities using spaCy's NER\n",
+    "    if any(ent.label_ in SENSITIVE_ENTITIES for ent in doc.ents):\n",
+    "        return True\n",
+    "    \n",
+    "    # Check for sensitive patterns using regex\n",
+    "    for key, pattern in PATTERNS.items():\n",
+    "        if isinstance(pattern, list):\n",
+    "            if any(sub_pattern.search(text) for sub_pattern in pattern):\n",
+    "                return True\n",
+    "        else:\n",
+    "            if pattern.search(text):\n",
+    "                return True\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "def remove_sensitive_info(text, language):\n",
+    "    \"\"\"Remove sensitive information from the text.\"\"\"\n",
+    "    if not text:\n",
+    "        return text\n",
+    "    \n",
+    "    nlp = nlp_models.get(language, nlp_models['en'])\n",
+    "    doc = nlp(text)\n",
+    "    \n",
+    "    # Redact sensitive entities\n",
+    "    redacted_text = []\n",
+    "    for token in doc:\n",
+    "        if token.ent_type_ in SENSITIVE_ENTITIES:\n",
+    "            redacted_text.append(\"[REDACTED]\")\n",
+    "        else:\n",
+    "            redacted_text.append(token.text)\n",
+    "    \n",
+    "    redacted_text = ' '.join(redacted_text)\n",
+    "    \n",
+    "    # Redact sensitive patterns using regex\n",
+    "    for key, pattern in PATTERNS.items():\n",
+    "        if isinstance(pattern, list):\n",
+    "            for sub_pattern in pattern:\n",
+    "                redacted_text = sub_pattern.sub(\"[REDACTED]\", redacted_text)\n",
+    "        else:\n",
+    "            redacted_text = pattern.sub(\"[REDACTED]\", redacted_text)\n",
+    "    \n",
+    "    return redacted_text\n",
+    "\n",
+    "# Example usage with a DataFrame\n",
+    "df['Contains_Sensitive_Info'] = df['Cleaned_Text'].apply(lambda x: contains_sensitive_info(x, 'en'))\n",
+    "df['Redacted_Text'] = df['Cleaned_Text'].apply(lambda x: remove_sensitive_info(x, 'en'))\n",
+    "df.head(25)"
    ]
   },
   {
