Added the newest version of the code.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -33,11 +33,17 @@
     "\n",
     "This program extracts text from PDFs, cleans it, and performs topic modeling using BERTopic.\n",
     "\n",
-    "## Usage\n",
-    "1. Place your PDFs in the `papers` folder.\n",
-    "2. Run the script to extract, clean, and analyze the text.\n",
-    "3. The cleaned data will be saved to `csv/all_cleaned_pdf.csv`.\n",
-    "4. Topic modeling results will be visualized using BERTopic.\n",
+    "Process steps\n",
+    "1. Extract text from either a single or multiple research study PDFs. Path is 'studies/papers'\n",
+    "2. Clean it using spaCy with language support for english, dutch and french.\n",
+    "3. The cleaned data will be saved to 'csv/all_cleaned_pdf.csv'.\n",
+    "4. Take the data from the the csv and put into a dataframe.\n",
+    "5. Remove any sensitive data and patterns\n",
+    "6. Initialize and fit BERTopic\n",
+    "7. Visualize Topics\n",
+    "8. Visualize Topic Hierarchy\n",
+    "9. Visualize documents\n",
+    "10. Visualize topics full article\n",
     "\n",
     "\n",
     "## Requirements\n",
@@ -68,18 +74,16 @@
     "import os\n",
     "import re\n",
     "from collections import Counter\n",
-    "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
     "from multiprocessing import Lock\n",
     "from typing import List, Dict, Any\n",
     "\n",
     "import bertopic  # For topic modeling\n",
-    "import nltk\n",
-    "import pandas as pd\n",
-    "import pdfplumber\n",
+    "import pandas as pd # For data manipulation\n",
+    "import fitz # For PDF text extraction\n",
     "import spacy  # For Dutch and French tokenization\n",
     "from langdetect import detect, LangDetectException  # For language detection\n",
     "from tqdm import tqdm  # For progress tracking\n",
-    "from wordsegment import load, segment"
+    "from wordsegment import load, segment  # For word segmentation"
    ]
   },
   {
@@ -97,101 +101,132 @@
     }
    ],
    "source": [
+    "# Load English word segmentation model\n",
+    "load()\n",
+    "\n",
     "# Configure logging\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
     "# Paths\n",
-    "pdf_directory = r'papers'  # Replace with the path to your PDF folder\n",
-    "output_csv = r'csv/cleanedpdfs.csv'  # Replace with the desired output CSV file name\n",
+    "PDF_DIRECTORY = \"papers\"  # Replace with the path to your PDF folder\n",
+    "OUTPUT_CSV = \"csv/cleanedpdfsV5.csv\"  # Replace with the desired output CSV file name\n",
     "\n",
     "# Validate directory existence\n",
-    "if not os.path.exists(pdf_directory):\n",
-    "    logging.error(f\"PDF directory does not exist: {pdf_directory}\")\n",
+    "if not os.path.exists(PDF_DIRECTORY):\n",
+    "    logging.error(f\"PDF directory does not exist: {PDF_DIRECTORY}\")\n",
     "    exit(1)\n",
     "\n",
     "# Load spaCy models for efficiency\n",
-    "nlp_models = {\n",
+    "NLP_MODELS = {\n",
     "    'en': spacy.load(\"en_core_web_lg\"),\n",
     "    'nl': spacy.load(\"nl_core_news_lg\"),\n",
     "    'fr': spacy.load(\"fr_core_news_lg\")\n",
     "}\n",
     "\n",
-    "def validate_pdf_path(pdf_path):\n",
+    "def validate_pdf_path(pdf_path: str) -> bool:\n",
     "    \"\"\"Validate that the PDF path exists and is readable.\"\"\"\n",
-    "    if not os.path.exists(pdf_path):\n",
-    "        logging.error(f\"PDF file does not exist: {pdf_path}\")\n",
-    "        return False\n",
-    "    if not os.access(pdf_path, os.R_OK):\n",
-    "        logging.error(f\"PDF file is not readable: {pdf_path}\")\n",
+    "    if not os.path.exists(pdf_path) or not os.access(pdf_path, os.R_OK):\n",
+    "        logging.error(f\"PDF file is not accessible: {pdf_path}\")\n",
     "        return False\n",
     "    return True\n",
     "\n",
-    "def extract_text_from_pdf(pdf_path):\n",
-    "    \"\"\"Extract text from a PDF file using pdfplumber.\"\"\"\n",
+    "def extract_text_from_pdf(pdf_path: str) -> str:\n",
+    "    \"\"\"Extract text from a PDF file using PyMuPDF.\"\"\"\n",
     "    try:\n",
-    "        text = ''\n",
-    "        with pdfplumber.open(pdf_path) as pdf:\n",
-    "            for page in pdf.pages:\n",
-    "                extracted = page.extract_text()\n",
-    "                if extracted:\n",
-    "                    text += extracted + \" \"\n",
-    "        return text.strip()\n",
+    "        with fitz.open(pdf_path) as doc:\n",
+    "            return \" \".join(page.get_text() for page in doc).strip()\n",
     "    except Exception as e:\n",
-    "        logging.error(f\"Error extracting {pdf_path}: {e}\")\n",
+    "        logging.error(f\"Error extracting text from {pdf_path}: {e}\")\n",
     "        return \"\"\n",
     "\n",
-    "def detect_language(text):\n",
+    "def detect_language(text: str) -> str:\n",
     "    \"\"\"Detect the language of the text using langdetect.\"\"\"\n",
     "    try:\n",
     "        language = detect(text)\n",
-    "        if language in nlp_models:\n",
-    "            return language\n",
-    "        logging.warning(f\"Unsupported language ({language}). Skipping.\")\n",
-    "        return None  # Instead of defaulting to 'en'\n",
+    "        return language if language in NLP_MODELS else 'en'\n",
     "    except LangDetectException:\n",
-    "        logging.error(\"Language detection failed.\")\n",
-    "        return None\n",
+    "        logging.error(\"Language detection failed. Defaulting to 'en'.\")\n",
+    "        return 'en'\n",
     "\n",
-    "def clean_text_with_spacy(text, language):\n",
-    "    \"\"\"Efficiently clean text using spaCy.\"\"\"\n",
-    "    try:\n",
-    "        nlp = nlp_models.get(language, nlp_models['en'])\n",
-    "        doc = nlp(text)  # Direct processing\n",
-    "        return ' '.join(token.lemma_ for token in doc if not token.is_stop and not token.is_punct)\n",
-    "    except Exception as e:\n",
-    "        logging.error(f\"Error cleaning text: {e}\")\n",
-    "        return \"\"\n",
+    "def clean_text(text: str, language: str) -> str:\n",
+    "    \"\"\"Clean and tokenize text using spaCy.\"\"\"\n",
+    "    nlp = NLP_MODELS.get(language, NLP_MODELS['en'])\n",
+    "    doc = nlp(text)\n",
+    "    return \" \".join(token.lemma_.lower() for token in doc if not token.is_stop and not token.is_punct)\n",
     "\n",
-    "def process_pdfs(pdf_paths):\n",
-    "    \"\"\"Extract, detect language, and clean text from multiple PDFs sequentially.\"\"\"\n",
+    "def split_long_words(text: str) -> str:\n",
+    "    \"\"\"Split long words into meaningful segments using wordsegment.\"\"\"\n",
+    "    return \" \".join(\" \".join(segment(word)) if len(word) > 10 else word for word in text.split())\n",
+    "\n",
+    "def extract_clean_sentences(pdf_path: str) -> List[Dict[str, str]]:\n",
+    "    \"\"\"Extract and clean sentences from a PDF using PyMuPDF and spaCy.\"\"\"\n",
+    "    text_data = []\n",
+    "    filename = os.path.basename(pdf_path)\n",
+    "    headers, footers = Counter(), Counter()\n",
+    "    \n",
+    "    with fitz.open(pdf_path) as doc:\n",
+    "        for page in doc:\n",
+    "            lines = page.get_text().split(\"\\n\")\n",
+    "            if len(lines) > 2:\n",
+    "                headers[lines[0]] += 1\n",
+    "                footers[lines[-1]] += 1\n",
+    "\n",
+    "        common_header = headers.most_common(1)[0][0] if headers else \"\"\n",
+    "        common_footer = footers.most_common(1)[0][0] if footers else \"\"\n",
+    "\n",
+    "        for page_num, page in enumerate(doc, start=1):\n",
+    "            lines = page.get_text().split(\"\\n\")\n",
+    "            if len(lines) > 2:\n",
+    "                if lines[0] == common_header:\n",
+    "                    lines.pop(0)\n",
+    "                if lines[-1] == common_footer:\n",
+    "                    lines.pop(-1)\n",
+    "\n",
+    "            cleaned_text = re.sub(r\"\\s{2,}\", \" \", \" \".join(lines))\n",
+    "            cleaned_text = re.sub(r\"Page \\d+\", \"\", cleaned_text)\n",
+    "            sentences = cleaned_text.strip().split('.')\n",
+    "            \n",
+    "            for sentence in sentences:\n",
+    "                cleaned_sentence = split_long_words(sentence.strip())\n",
+    "                if cleaned_sentence:\n",
+    "                    text_data.append({\n",
+    "                        \"filename\": filename, \n",
+    "                        \"Page\": page_num, \n",
+    "                        \"sentence\": cleaned_sentence,\n",
+    "                        })\n",
+    "    \n",
+    "    return text_data\n",
+    "\n",
+    "def process_pdfs(pdf_paths: List[str]) -> List[Dict[str, str]]:\n",
+    "    \"\"\"Process multiple PDFs sequentially.\"\"\"\n",
     "    results = []\n",
     "    for pdf_path in tqdm(pdf_paths, desc=\"Processing PDFs\"):\n",
     "        if validate_pdf_path(pdf_path):\n",
-    "            text = extract_text_from_pdf(pdf_path)\n",
-    "            if text:\n",
-    "                language = detect_language(text)\n",
-    "                cleaned_text = clean_text_with_spacy(text, language)\n",
-    "                if cleaned_text:\n",
-    "                    results.append(cleaned_text)\n",
+    "            results.extend(extract_clean_sentences(pdf_path))\n",
     "    return results\n",
     "\n",
-    "def write_to_csv(data, output_csv):\n",
-    "    \"\"\"Write cleaned text data to a CSV file efficiently.\"\"\"\n",
+    "def write_to_csv(data: List[Dict[str, str]], output_csv: str) -> None:\n",
+    "    \"\"\"Write cleaned text data to a CSV file.\"\"\"\n",
     "    os.makedirs(os.path.dirname(output_csv), exist_ok=True)\n",
     "    with open(output_csv, 'w', newline='', encoding='utf-8') as file:\n",
-    "        writer = csv.writer(file)\n",
-    "        writer.writerow([\"Cleaned_Text\"])\n",
-    "        for row in data:\n",
-    "            writer.writerow([row])\n",
+    "        writer = csv.DictWriter(file, fieldnames=[\"filename\", \"Page\", \"sentence\"])\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(data)\n",
     "    logging.info(f\"Saved cleaned data to {output_csv}\")\n",
     "\n",
-    "# Process PDFs and write to CSV\n",
-    "pdf_paths = [os.path.join(pdf_directory, file) for file in os.listdir(pdf_directory) if file.endswith(\".pdf\")]\n",
+    "# Get list of PDF paths\n",
+    "pdf_paths = [os.path.join(PDF_DIRECTORY, file) for file in os.listdir(PDF_DIRECTORY) if file.endswith(\".pdf\")]\n",
+    "\n",
+    "# Process PDFs and extract text\n",
     "cleaned_texts = process_pdfs(pdf_paths)\n",
+    "\n",
+    "# Write cleaned text to CSV\n",
     "if cleaned_texts:\n",
-    "    write_to_csv(cleaned_texts, output_csv)\n",
+    "    write_to_csv(cleaned_texts, OUTPUT_CSV)\n",
+    "    df = pd.read_csv(OUTPUT_CSV)\n",
+    "    print(df.head(30))\n",
     "else:\n",
-    "    logging.error(\"No cleaned text data to save.\")\n"
+    "    logging.error(\"No cleaned text data to save.\")"
    ]
   },
   {
@@ -227,7 +262,7 @@
    ],
    "source": [
     "# Load the data\n",
-    "df = pd.read_csv(output_csv)\n",
+    "df = pd.read_csv(OUTPUT_CSV)\n",
     "df.head(30)"
    ]
   },
